--- a/application/templates/user.html
+++ b/application/templates/user.html
@@ -16,6 +16,7 @@
                 {% else %}
                 <p><a href="{{ url_for('unfollow', username=user.username) }}">Unfollow</a></p>
                 {% endif %}
+
             </td>
         </tr>
     </table>
@@ -23,4 +24,10 @@
     {% for post in posts %}
         {% include '_post.html' %}
     {% endfor %}
+    {% if prev_url %}
+    <a href="{{ prev_url }}">Newer posts</a>
+    {% endif %}
+    {% if next_url %}
+    <a href="{{ next_url }}">Older posts</a>
+    {% endif %}
 {% endblock %}
